--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
+	<a href="#navAbout" class="skip-link">Skip to main content</a>
 	<header id="navHeader">
 		<div class="headerLinks wrapper">
 			<ul class="navLinks">
@@ -146,91 +147,94 @@
 						</div>
 					</figcaption>
 				</figure>
-				<figure>
-					<img src="./public/assets/image-8.png" alt="HackerYou CEO Heather Payne is presenting to a full classroom of HackerYou students.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+				<div class="galleryOverflow hidden">
+					<figure>
+						<img src="./public/assets/image-8.png" alt="HackerYou CEO Heather Payne is presenting to a full classroom of HackerYou students.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="./public/assets/image-11.png" alt="Multiple HackerYou students in class listening attentively to their instructor.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="./public/assets/image-11.png" alt="Multiple HackerYou students in class listening attentively to their instructor.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="./public/assets/image-3.png" alt="Two HackerYou students sitting on a couch and working.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="./public/assets/image-3.png" alt="Two HackerYou students sitting on a couch and working.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="./public/assets/image-6.png" alt="A picture of HackerYou's common space with some students in discussion and other students working.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="./public/assets/image-6.png" alt="A picture of HackerYou's common space with some students in discussion and other students working.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="./public/assets/image-9.png" alt="An empty classroom at HackerYou.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="./public/assets/image-9.png" alt="An empty classroom at HackerYou.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
-				<figure>
-					<img src="./public/assets/image-12.png" alt="Four HackerYou students sitting at a long table coding on their laptops.">
-					<figcaption>
-						<div class="overlay">
-							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="./public/assets/image-12.png" alt="Four HackerYou students sitting at a long table coding on their laptops.">
+						<figcaption>
+							<div class="overlay">
+								<h3>HackerYou</h3>
+								<div class="overlayStyling">
+									<div class="overlayBefore"><span></span></div>
+									<p>January 8th, 2018</p>
+									<div class="overlayAfter"><span></span></div>
+								</div>
+								<a href="https://hackeryou.com" target="_blank">View</a>
 							</div>
-							<a href="https://hackeryou.com" target="_blank">View</a>
-						</div>
-					</figcaption>
-				</figure>
+						</figcaption>
+					</figure>
+				</div>
 			</div>
+			<button class="showOverflow">Show more</button>
 		</section>
 	</div>
 	<section id="navContact" class="contact">
@@ -268,8 +272,25 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
 	<script>
+		
+		eventListeners = () => {
+			$('.navLinks a, .navigation a, .skip-link').smoothScroll();
+			$('.showOverflow').on('click', () => {
+				$('.galleryOverflow').toggleClass('hidden');
+				if ($('.galleryOverflow').hasClass('hidden')) {
+					$('.showOverflow').text('Show more');
+				} else {
+					$('.showOverflow').text('Show less');
+				};
+			});
+		};
+
+		init = () => {
+			eventListeners();
+		}
+
 		$(() => {
-			$('.navigation a').smoothScroll();
+			init();
 		})
 	</script>
 </body>
