Fixed contact form for responsive

--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
 	</div>
 	<section id="navContact" class="contact">
 		<h4>Subscribe to our newsletter</h4>
-		<form action="">
+		<form action="" class="contactForm">
 			<label for="email" class="visuallyhidden"></label>
 			<input type="email" id="email" placeholder="email address" required="true">
 			<input type="submit" value="subscribe">
-		</form>
+		</form>			
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy.</p>
 	</section>
 	<nav class="navigation navLower">
