Base styling for tablet responsive complete

--- a/index.html
+++ b/index.html
@@ -238,13 +238,15 @@
 		</section>
 	</div>
 	<section id="navContact" class="contact">
-		<h4>Subscribe to our newsletter</h4>
-		<form action="" class="contactForm">
-			<label for="email" class="visuallyhidden"></label>
-			<input type="email" id="email" placeholder="email address" required="true">
-			<input type="submit" value="subscribe">
-		</form>			
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy.</p>
+		<div class="mobileWrapper">
+			<h4>Subscribe to our newsletter</h4>
+			<form action="" class="contactForm">
+				<label for="email" class="visuallyhidden"></label>
+				<input type="email" id="email" placeholder="email address" required="true">
+				<input type="submit" value="subscribe">
+			</form>			
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy.</p>
+		</div>
 	</section>
 	<nav class="navigation navLower">
 		<ul>
