Mobile responsive, added mobile menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<ul class="navLinks">
 				<li><a href="#navContact">Contact</a></li>
 				<li><a href="#navAbout">About</a></li>
+				<li class="mobileMenu"><i class="fas fa-bars"></i></li>
 			</ul>
 			<ul class="socialLinks">
 				<li><a href="https://twitter.com/hackeryou" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -26,11 +27,11 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<main>
+		<main id="navHome">
 			<h1 class="title">HackerYou</h1>
-			<nav class="navigation navUpper">
+			<nav class="navigation navUpper hidden">
 				<ul>
-					<li><a href="#navHeader">Home</a></li>
+					<li><a href="#navHome">Home</a></li>
 					<li><a href="#navAbout">About</a></li>
 					<li><a href="#navContact">Contact</a></li>
 					<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
@@ -147,94 +148,92 @@
 						</div>
 					</figcaption>
 				</figure>
-				<div class="galleryOverflow hidden">
-					<figure>
-						<img src="./public/assets/image-8.png" alt="HackerYou CEO Heather Payne is presenting to a full classroom of HackerYou students.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+				<figure>
+					<img src="./public/assets/image-8.png" alt="HackerYou CEO Heather Payne is presenting to a full classroom of HackerYou students.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="./public/assets/image-11.png" alt="Multiple HackerYou students in class listening attentively to their instructor.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-11.png" alt="Multiple HackerYou students in class listening attentively to their instructor.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="./public/assets/image-3.png" alt="Two HackerYou students sitting on a couch and working.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-3.png" alt="Two HackerYou students sitting on a couch and working.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="./public/assets/image-6.png" alt="A picture of HackerYou's common space with some students in discussion and other students working.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-6.png" alt="A picture of HackerYou's common space with some students in discussion and other students working.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="./public/assets/image-9.png" alt="An empty classroom at HackerYou.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-9.png" alt="An empty classroom at HackerYou.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="./public/assets/image-12.png" alt="Four HackerYou students sitting at a long table coding on their laptops.">
-						<figcaption>
-							<div class="overlay">
-								<h3>HackerYou</h3>
-								<div class="overlayStyling">
-									<div class="overlayBefore"><span></span></div>
-									<p>January 8th, 2018</p>
-									<div class="overlayAfter"><span></span></div>
-								</div>
-								<a href="https://hackeryou.com" target="_blank">View</a>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="./public/assets/image-12.png" alt="Four HackerYou students sitting at a long table coding on their laptops.">
+					<figcaption>
+						<div class="overlay">
+							<h3>HackerYou</h3>
+							<div class="overlayStyling">
+								<div class="overlayBefore"><span></span></div>
+								<p>January 8th, 2018</p>
+								<div class="overlayAfter"><span></span></div>
 							</div>
-						</figcaption>
-					</figure>
-				</div>
+							<a href="https://hackeryou.com" target="_blank">View</a>
+						</div>
+					</figcaption>
+				</figure>
 			</div>
-			<button class="showOverflow">Show more</button>
+			<button class="toggleOverflow">Show more</button>
 		</section>
 	</div>
 	<section id="navContact" class="contact">
@@ -250,7 +249,7 @@
 	</section>
 	<nav class="navigation navLower">
 		<ul>
-			<li><a href="#navHeader">Home</a></li>
+			<li><a href="#navHome">Home</a></li>
 			<li><a href="#navAbout">About</a></li>
 			<li><a href="#navContact">Contact</a></li>
 			<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
@@ -274,15 +273,20 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
 	<script>
-		
 		eventListeners = () => {
-			$('.navLinks a, .navigation a, .skip-link').smoothScroll();
-			$('.showOverflow').on('click', () => {
-				$('.galleryOverflow').toggleClass('hidden');
-				if ($('.galleryOverflow').hasClass('hidden')) {
-					$('.showOverflow').text('Show more');
-				} else {
-					$('.showOverflow').text('Show less');
+			$('.navLinks a, .navigation a, .skip-link').smoothScroll({
+				offset: -15
+			});
+			$('.mobileMenu, .navUpper a').on('click', () => {
+				$('.navUpper').toggleClass('hidden');
+			})
+			$('.toggleOverflow').on('click', () => {
+				if ($('.toggleOverflow').text() === 'Show more') {
+					$('figure:nth-child(6) ~ figure').css('display', 'block');
+					$('.toggleOverflow').text('Show less')
+				} else if ($('.toggleOverflow').text() === 'Show less') {
+					$('figure:nth-child(6) ~ figure').css('display', 'none');
+					$('.toggleOverflow').text('Show more');
 				};
 			});
 		};
