--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title></title>
-	<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Raleway:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Raleway:400,500,700,800" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
@@ -43,37 +43,29 @@
 	</div>
 	<div class="wrapper">
 		<section id="navAbout" class="about">
-			<div class="headerStyling">
-				<div class="lineBefore"><span></span></div>
-				<h2>About</h2>
-				<div class="lineAfter"><span></span></div>
-			</div>
+			<h2 class="heading">About</h2>
 			<div class="columns">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi, iusto quo. Illo quo id delectus soluta, commodi, saepe laboriosam. Quisquam placeat dolor consequatur eligendi tempora, dicta facilis, dignissimos quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				<p>Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, iusto dolor dolores natus numquam sapiente.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates aliquid commodi ad nobis unde blanditiis, eligendi, omnis, culpa officiis voluptatibus accusantium aperiam facere quam suscipit dicta nesciunt perferendis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, illo? Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates aliquid commodi ad nobis unde blanditiis, eligendi, omnis, culpa officiis voluptatibus accusantium aperiam facere quam suscipit dicta nesciunt perferendis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, illo? Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</div>
 		</section>
 	</div>
 	<div class="wrapper">
 		<section id="navGallery" class="gallery">
-			<div class="headerStyling">
-				<div class="lineBefore"><span></span></div>
-				<h2>Gallery</h2>
-				<div class="lineAfter"><span></span></div>
-			</div>
+			<h2 class="heading">Gallery</h2>
 			<div class="imageGallery">
 				<figure>
 					<img src="./public/assets/image-1.png" alt="Two students coding on their laptops.">
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<!-- <div class="overlayStyling"> -->
+								<!-- <div class="overlayBefore"><span></span></div> -->
+							<p>January 8th, 2018</p>
+								<!-- <div class="overlayAfter"><span></span></div> -->
+							<!-- </div> -->
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
