Cleaned up markup

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title></title>
+	<title>Technical Challenge</title>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif|Raleway:400,500,700,800" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
 	<a href="#navAbout" class="skip-link">Skip to main content</a>
-	<header id="navHeader">
+	<nav>
 		<div class="headerLinks wrapper">
 			<ul class="navLinks">
 				<li><a href="#navContact">Contact</a></li>
@@ -25,9 +25,9 @@
 				<li><a href="https://hackeryou.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
 			</ul>
 		</div>
-	</header>
-	<div class="wrapper">
-		<main id="navHome">
+	</nav>
+	<header id="navHeader">
+		<div class="wrapper">
 			<h1 class="title">HackerYou</h1>
 			<nav class="navigation navUpper hidden">
 				<ul>
@@ -39,10 +39,10 @@
 				</ul>
 			</nav>
 			<img src="./public/assets/image-main.png" alt="A wide angle image of a classroom full of students eager to learn web development skills.">
-		</main>
-	</div>
-	<div class="wrapper">
-		<section id="navAbout" class="about">
+		</div>
+	</header>
+	<section id="navAbout" class="about">
+		<div class="wrapper">
 			<h2 class="heading">About</h2>
 			<div class="columns">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique vero labore perferendis illum fugit, accusamus cumque, ea saepe in quas placeat nihil iure, eum minima dolor consequuntur enim alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptatibus sint in hic quaerat, necessitatibus sit officia est beatae quia, placeat pariatur et aliquid commodi aut nemo labore quibusdam, alias.</p>
@@ -50,10 +50,10 @@
 				<p>Omnis error quos earum non numquam aliquid modi eius culpa. Velit, saepe porro asperiores pariatur corporis quisquam ipsam nesciunt, minus. Nam, soluta!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consectetur et eveniet amet non molestias temporibus corporis quos, sit ad minima voluptate repellat maiores voluptates dicta vel voluptas asperiores sunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, iusto dolor dolores natus numquam sapiente.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt et eum voluptas labore unde aperiam placeat excepturi suscipit est ex sint corporis harum vero, nobis sunt sed ab. Nobis, ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit voluptates aliquid commodi ad nobis unde blanditiis, eligendi, omnis, culpa officiis voluptatibus accusantium aperiam facere quam suscipit dicta nesciunt perferendis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, illo? Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</div>
-		</section>
-	</div>
-	<div class="wrapper">
-		<section id="navGallery" class="gallery">
+		</div>
+	</section>
+	<section id="navGallery" class="gallery">
+		<div class="wrapper">
 			<h2 class="heading">Gallery</h2>
 			<div class="imageGallery">
 				<figure>
@@ -61,11 +61,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<!-- <div class="overlayStyling"> -->
-								<!-- <div class="overlayBefore"><span></span></div> -->
 							<p>January 8th, 2018</p>
-								<!-- <div class="overlayAfter"><span></span></div> -->
-							<!-- </div> -->
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -75,11 +71,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -89,11 +81,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -103,11 +91,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -117,11 +101,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -131,11 +111,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -145,11 +121,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -159,11 +131,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -173,11 +141,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -187,11 +151,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -201,11 +161,7 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
@@ -215,19 +171,15 @@
 					<figcaption>
 						<div class="overlay">
 							<h3>HackerYou</h3>
-							<div class="overlayStyling">
-								<div class="overlayBefore"><span></span></div>
-								<p>January 8th, 2018</p>
-								<div class="overlayAfter"><span></span></div>
-							</div>
+							<p>January 8th, 2018</p>
 							<a href="https://hackeryou.com" target="_blank">View</a>
 						</div>
 					</figcaption>
 				</figure>
 			</div>
 			<button class="toggleOverflow">Show more</button>
-		</section>
-	</div>
+		</div>
+	</section>
 	<section id="navContact" class="contact">
 		<div class="mobileWrapper">
 			<h4>Subscribe to our newsletter</h4>
@@ -239,16 +191,16 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy.</p>
 		</div>
 	</section>
-	<nav class="navigation navLower">
-		<ul>
-			<li><a href="#navHome">Home</a></li>
-			<li><a href="#navAbout">About</a></li>
-			<li><a href="#navContact">Contact</a></li>
-			<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
-			<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
-		</ul>
-	</nav>
 	<footer>
+		<nav class="navigation navLower">
+			<ul>
+				<li><a href="#navHome">Home</a></li>
+				<li><a href="#navAbout">About</a></li>
+				<li><a href="#navContact">Contact</a></li>
+				<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
+				<li><a href="https://hackeryou.com/courses/web-development#courses" target="_blank">Part-Time</a></li>
+			</ul>
+		</nav>
 		<div class="wrapper">
 			<div class="footerContainer">
 				<p>&copy; 2018 <a href="https://hackeryou.com/" target="_blank">HackerYou</a></p>
@@ -264,32 +216,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
-	<script>
-		eventListeners = () => {
-			$('.navLinks a, .navigation a, .skip-link').smoothScroll({
-				offset: -15
-			});
-			$('.mobileMenu, .navUpper a').on('click', () => {
-				$('.navUpper').toggleClass('hidden');
-			});
-			$('.toggleOverflow').on('click', () => {
-				if ($('.toggleOverflow').text() === 'Show more') {
-					$('figure:nth-child(6) ~ figure').css('display', 'block');
-					$('.toggleOverflow').text('Show less')
-				} else if ($('.toggleOverflow').text() === 'Show less') {
-					$('figure:nth-child(6) ~ figure').css('display', 'none');
-					$('.toggleOverflow').text('Show more');
-				};
-			});
-		};
+	<script src="public/scripts/main.js"></script>
 
-		init = () => {
-			eventListeners();
-		}
-
-		$(() => {
-			init();
-		})
-	</script>
 </body>
 </html>
