Completed nesting touchups

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<h1 class="title">HackerYou</h1>
 			<nav class="navigation navUpper hidden">
 				<ul>
-					<li><a href="#navHome">Home</a></li>
+					<li><a href="#navHeader">Home</a></li>
 					<li><a href="#navAbout">About</a></li>
 					<li><a href="#navContact">Contact</a></li>
 					<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
@@ -194,7 +194,7 @@
 	<footer>
 		<nav class="navigation navLower">
 			<ul>
-				<li><a href="#navHome">Home</a></li>
+				<li><a href="#navHeader">Home</a></li>
 				<li><a href="#navAbout">About</a></li>
 				<li><a href="#navContact">Contact</a></li>
 				<li><a href="https://hackeryou.com/courses/bootcamp" target="_blank">Bootcamp</a></li>
