Cleaned up stylesheets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<a href="#navAbout" class="skip-link">Skip to main content</a>
 	<nav>
-		<div class="headerLinks wrapper">
+		<div class="linksContainer wrapper">
 			<ul class="navLinks">
 				<li><a href="#navContact">Contact</a></li>
 				<li><a href="#navAbout">About</a></li>
